--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,41 @@
 /* start */
 
- header {
-  margin: 10%;
-  text-align: center;
- }
+#header {
 
- h1 {
+}
 
- }
+h1 {
 
- h2 {
+}
 
- }
+h2 {
 
- #score-heading {
+}
 
- }
+#score-heading {
+
+}
+
+#main {
+
+}
+
+#score-box {
+
+}
+
+#crystal-head {
+
+}
+
+#crystals {
+
+}
+
+#guess-head {
+
+}
+
+#guess-box {
+
+}
