--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
 /* start */
 
-#header {
+#container {
 
+}
+
+#header {
+  height: 20px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 h1 {
@@ -12,30 +24,110 @@ h2 {
 
 }
 
-#score-heading {
-
-}
-
-#main {
-
+#score-head {
+  height: 20px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #score-box {
-
+  height: 100px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #crystal-head {
-
+  height: 20px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #crystals {
-
+  height: 100px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #guess-head {
-
+  height: 20px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 #guess-box {
+  height: 100px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
+}
 
+#win-loss-head {
+  height: 20px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+#win-loss1 {
+  height: 50px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+#win-loss2 {
+  height: 50px;
+  width: 300px;
+  margin-left: 33.33%;
+  margin-right: 33.33%;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+  text-align: center;
+  margin-top: 20px;
 }
